yamls/skooner/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: skooner
  labels:
    name: skooner
