yamls/skooner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skooner
  namespace: skooner
spec:
  selector:
    matchLabels:
      k8s-app: skooner
  replicas: 1 
  template:
    metadata:
      labels:
        k8s-app: skooner
    spec:
      containers:
      - name: skooner
        image: ghcr.io/skooner-k8s/skooner:stable 
        ports:
        - containerPort: 4654
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 4654
          initialDelaySeconds: 30
          timeoutSeconds: 30
