yamls/skooner/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skooner
  namespace: skooner
spec:
  rules:
  - host: skooner.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: skooner
            port:
              number: 80
